--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'jvm-component'
     id 'java-lang'
+    id 'junit-test-suite'
 }
 
 model {
@@ -11,6 +12,12 @@ model {
                     source.srcDir 'src/main/java'
                 }
             }
+        }
+    }
+    testSuites {
+        test(JUnitTestSuiteSpec) {
+            jUnitVersion libraries.jUnitVersion
+            testing $.components.get('at.o2xfs.common')
         }
     }
 }
