Moved native build out of build.gradle due to (Travis-)CI. Deploy native binaries within JARs.

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,18 @@ dependencies {
     testCompile libraries.junit
 }
 
+// create the javadoc jar
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    from javadoc.destinationDir
+    classifier = 'javadoc'
+}
+
+// create the sources jar
+task sourcesJar(type: Jar, dependsOn: compileJava) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -17,19 +29,21 @@ publishing {
 
             artifact javadocJar {
                 classifier 'javadoc'
-            }            
+            }
         }
     }
-}
 
-// create the javadoc jar
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    from javadoc.destinationDir
-    classifier = 'javadoc'
-}
-
-// create the sources jar
-task sourcesJar(type: Jar, dependsOn: compileJava) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
+    repositories {
+        maven {
+            url "https://repo.fagschlunger.co.at/libs-snapshot-local"
+            credentials {
+                username = project.hasProperty('maven_username') ? project.getProperty('maven_username') : ''
+                password = project.hasProperty('maven_password') ? project.getProperty('maven_password') : ''
+            }
+        }
+    }
+}aven_password') : ''
+            }
+        }
+    }
 }
