Travis-CI: chmod gradlew

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@
 language: java
 jdk:
   - openjdk8
+before_install:
+  - chmod +x gradlew
 install: ./gradlew --version
 script:
   - ./gradlew build
